plugins/editorconfig/testData/org/editorconfig/language/highlighting/error/danglingDot/.editorconfig
[*.java]
charset<error>.</error> = utf-8
qualified.key.foo<error>.</error> = value
